2025-01-08T00:37:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12661777763 # 758
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-08
* notice: last 14d: unq all: 16 54
* notice: prev accum: outdated-unq outdated-all / unq all: 922 4872 / 942 4934
* notice: next accum: outdated-unq outdated-all / unq all: 926 4880 / 942 4934
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-12-24] / []

2025-01-05T12:13:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12619384518 # 753
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-05
* notice: last 14d: unq all: 20 62
* notice: prev accum: outdated-unq outdated-all / unq all: 921 4866 / 942 4934
* notice: next accum: outdated-unq outdated-all / unq all: 922 4872 / 942 4934
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-12-22] / []

2025-01-04T12:12:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12610331097 # 751
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-04
* notice: last 14d: unq all: 21 68
* notice: prev accum: outdated-unq outdated-all / unq all: 921 4866 / 940 4928
* notice: next accum: outdated-unq outdated-all / unq all: 921 4866 / 942 4934
* notice: prev exec diff / last date diff / accum: unq all: +2 +6 -0 -0 / +2 +6 -0 -0 / 2 6
* notice: removed / changed dates: [] / [2025-01-04]

2025-01-03T12:13:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12597517727 # 749