@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-01-08T00:37:41Z",
-  "count_outdated" : 4880,
-  "uniques_outdated" : 926,
+  "timestamp" : "2025-01-08T12:14:21Z",
+  "count_outdated" : 4881,
+  "uniques_outdated" : 927,
   "count" : 4934,
   "uniques" : 942,
   "views" : [
-    {
-      "timestamp": "2024-12-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-12-26T00:00:00Z",
       "count": 32,
