@@ -1,12 +1,7 @@
 {
-  "count": 54,
-  "uniques": 16,
+  "count": 53,
+  "uniques": 15,
   "views": [
-    {
-      "timestamp": "2024-12-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-12-26T00:00:00Z",
       "count": 32,
