@@ -1,3 +1,12 @@
+2025-01-08T12:14:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12670333907 # 759
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-08
+* notice: last 14d: unq all: 15 53
+* notice: prev accum: outdated-unq outdated-all / unq all: 926 4880 / 942 4934
+* notice: next accum: outdated-unq outdated-all / unq all: 927 4881 / 942 4934
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-12-25] / []
+
 2025-01-08T00:37:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12661777763 # 758
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-08
